# ask_data

./: .env.example  .gitignore  NDEA_MASTER_CONTROL.md  NDEA_PROGRESS_LEDGER.md  README.md  pyproject.toml  start.cmd  start.ps1  start_server.py
docs/: core_table_registry.generated.json
docs/superpowers/plans/: 2026-04-14-ndea-bootstrap.md  2026-04-14-ndea-db-inspector.md  2026-04-14-safe-executor.md
docs/superpowers/specs/: 2026-04-14-safe-executor-design.md
scripts/: generate_core_table_registry.py  load_semantic_assets.py  repair_mysql_comments.py  run_wenshu_live_eval.py
src/ndea/: __init__.py  config.py  main.py  protocol.py  runtime.py  server.py
src/ndea/adapters/: __init__.py  embedding.py  langfuse_tracer.py  llamaindex_engine.py
src/ndea/context/: __init__.py  models.py
src/ndea/execution/: __init__.py  query_executor_v2.py
src/ndea/generation/: __init__.py  candidate_sql_generator.py
src/ndea/http/: __init__.py  api.py
src/ndea/interaction/: __init__.py  service.py
src/ndea/learning/: __init__.py  events.py  milvus_sync.py
src/ndea/metadata/: __init__.py  introspector.py  models.py  mysql_client.py  sqlalchemy_client.py
src/ndea/observability/: __init__.py  audit.py  health.py
src/ndea/orchestration/: __init__.py  langgraph_workflow.py  query_graph_v2.py
src/ndea/planning/: __init__.py  attribute_lookup.py  candidate_plan_builder.py  core_registry.py  models.py  planner.py  query_router.py  workflow.py
src/ndea/portal/: __init__.py  models.py  service.py
src/ndea/query_v2/: __init__.py  models.py
src/ndea/ranking/: __init__.py  candidate_ranker.py
src/ndea/resolution/: __init__.py  mysql_schema_repository.py  schema_resolver.py
src/ndea/response/: __init__.py  assembler.py
src/ndea/security/: __init__.py  mysql_safe_execution.py  permission.py  policy.py  safe_executor.py  sql_guard.py
src/ndea/semantic/: __init__.py  campus_semantic_resolver.py  contracts.py
tests/: conftest.py  test_config.py  test_context.py  test_db_inspector_tool.py  test_fastapi_app.py  test_langgraph_workflow.py  test_live_smoke.py  test_main.py  test_metadata_introspector.py  test_metadata_models.py  test_milvus_client.py  test_mysql_config.py  test_mysql_safe_execution.py  test_observability.py  test_permission_checker.py  test_policy_resolver.py  test_portal_query_metadata.py  test_portal_query_service.py  test_portal_query_tool.py  test_portal_query_visualization.py  test_protocol.py  test_query_executor_tool.py  test_query_planner.py  test_query_planner_complex.py  test_query_planner_tool.py  test_query_planner_wenshu.py  test_query_router.py  test_query_v2_components.py  test_query_v2_integration.py  test_query_workflow.py  test_query_workflow_complex.py  test_query_workflow_tool.py  test_response_assembler.py  test_runtime_and_registry.py  test_safe_executor.py  test_scaffold.py  test_server.py  test_sql_generator.py  test_sql_generator_complex.py  test_sql_guard.py  (+6 more)
tests/evals/: complex_fixtures.json  fixtures.json  test_complex_eval_suite.py  test_eval_suite.py  wenshu_live_fixtures.json
(+29 files in other folders)
