[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndea"
version = "0.1.0"
description = "Nexus Data Expert Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastmcp==3.2.4",
  "fastapi==0.135.3",
  "langgraph==1.1.6",
  "mysql-connector-python==9.6.0",
  "pydantic==2.13.0",
  "pydantic-settings==2.13.1",
  "pymilvus==2.6.3",
  "qdrant-client==1.17.1",
  "sqlalchemy==2.0.49",
  "sse-starlette==3.3.4",
  "sqlglot==30.4.3",
  "uvicorn==0.44.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
]
nl2sql = [
  "llama-index",
]
observability = [
  "langfuse",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning",
  "ignore:'asyncio\\.iscoroutinefunction' is deprecated and slated for removal in Python 3\\.16; use inspect\\.iscoroutinefunction\\(\\) instead:DeprecationWarning",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
